# jm-parser

./: .gitignore  COPYRIGHT  README.md  requirements.txt  setup.cfg  setup.py
jm_parser/: cli.py  exceptions.py  parsing.py  plugin.py  scraping.py
