[metadata]
name = jm-parser
author = Sean Myers
author-email = sean.myers@redhat.com
summary = Jenkins Metadata Parser
description-file = README.md
home-page = https://github.com/seandst/jm-parser
license = GPLv3
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    jm_parser

[entry_points]
console_scripts =
    jm = jm_parser.cli:jm_cli_entry
